tests/negative/gold/interface5_test.gold
tests/negative/interface5_test.toit:7:20: error: Not an interface
class B implements A:
                   ^
Compilation failed.
